k3s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitwise-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: splitwise
  template:
    metadata:
      labels:
        app: splitwise
    spec:
      containers:
        - name: splitwise
          image: ghcr.io/kavyan256/splitwise:latest
          ports:
            - containerPort: 3000
          command: ["/bin/sh", "-c"]
          args: ["npx knex migrate:latest --env production && node src/index.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: splitwise-service
spec:
  selector:
    app: splitwise
  ports:
    - port: 80
      targetPort: 3000
