k3s/miniredis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniredis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniredis
  template:
    metadata:
      labels:
        app: miniredis
    spec:
      containers:
        - name: miniredis
          image: ghcr.io/kavyan256/miniredis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: miniredis-service
spec:
  selector:
    app: miniredis
  ports:
    - port: 6379
      targetPort: 6379
