k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitwise-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: splitwise.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splitwise-service
                port:
                  number: 80
